SNDBX-729 1. Add padding to the bottom of the create app modal. 2. Show new app image right after creation without refresh. 3. Show dialog with the recently created app's id. 4. Close the update modal window when an app has been updated. 5. Stop flicker after deleting an app.

--- a/projects/sandbox-manager/src/components/containers/Apps/AppDialog/styles.less
+++ b/projects/sandbox-manager/src/components/containers/Apps/AppDialog/styles.less
@@ -21,6 +21,9 @@
   }
 }
 .app-dialog {
+  .paper-body {
+  height: ~'calc(100% - 68px)';
+  }
   .paper-card {
     h3 {
       height: 68px;
