--- a/projects/sandbox-manager/src/components/containers/Apps/styles.less
+++ b/projects/sandbox-manager/src/components/containers/Apps/styles.less
@@ -160,10 +160,24 @@
   }
 }
 
+.created-app-dialog {
+  padding: 0 !important;
+  .paper-body {
+    padding: 16px 24px;
+    .client-id {
+      border: 1px solid #E6E6E6;
+      border-radius: 4px;
+      box-shadow: inset 0 1px 1px #F4F4F4;
+      padding: 5px 15px;
+      margin-top: 5px;
+      display: inline-block;
+    }
+  }
+}
+
 .app-dialog {
   .paper-body {
     width: 100%;
-    height: 90%;
     overflow: auto;
     box-sizing: border-box;
     &.auto {
