--- a/projects/sandbox-manager/src/style/main.less
+++ b/projects/sandbox-manager/src/style/main.less
@@ -96,7 +96,7 @@ body {
     width: 100%;
     background-color: #005778;
     color: whitesmoke;
-    padding: 20px;
+    padding: 23px;
     margin-top: 0;
     margin-bottom: 0;
     box-sizing: border-box;
